# archivepodcast

./: .gitattributes  .gitignore  .htmlvalidate.json  .markdownlint.jsonc  .pre-commit-config.yaml  .readthedocs.yaml  .trivyignore.yaml  CLAUDE.md  Dockerfile  Dockerfile_fast  Dockerfile_normal  LICENSE  Pipfile  README.md  README_DOCKER.md  README_dev.md  README_docker.md  README_examplesetup.md  README_local.md  README_local_nginx.md  README_s3_hybrid.md  README_s3_only.md  adhoc_model_build.py  adhocarchive.py  archivepodcast.py  biome.json  cspell.json  downloadpodcast.py  package-lock.json  package.json  piratepodcast.py  playground.py  podcastarchive.py  podcastargparser.py  podcastdownload.py  podcastlogging.py  podcastsettings.py  pyproject.toml  requirements-dev.txt  requirements.txt  (+4 more)
.cspell/: custom-archivepodcast.txt  custom-docker.txt  custom-ffmpeg.txt  custom-fonts.txt  custom-javascript.txt  custom-python.txt  custom-readme.txt
.github/: dependabot.yml
.github/workflows/: check.yml  check_js.yml  check_types.yml  docker.yml  docker_fast.yml  docker_normal.yml  publish.yml  publish_docker.yml  publish_docker_ecr.yml  ruff.yml  spell_check.yml  test.yml
archivepodcast/: __init__.py  __main__.py  ap_archiver.py  ap_constants.py  ap_downloader.py  ap_health.py  ap_helpers.py  ap_webpages.py  archivepodcast.py  archivepodcast_old.py  bp_archivepodcast.py  config.py  config_types.py  constants.py  download_podcast.py  grab_podcasts.py  helpers.py  instances.py  lambda_handler.py  logger.py  podcastsettings.py  run_adhoc.py  run_webapp.py  version.py
archivepodcast/archiver/: helpers.py  podcast_archiver.py  rss_models.py  webpage_renderer.py  webpages.py
archivepodcast/blueprints/: api.py  content.py  rss.py  static.py  webpages.py
archivepodcast/downloader/: __init__.py  asset_downloader.py  constants.py  downloader.py  helpers.py
archivepodcast/instances/: config.py  path_cache.py  path_helper.py  podcast_archiver.py  profiler.py
archivepodcast/routers/: __init__.py  api.py  content.py  rss.py  static.py  webpages.py
archivepodcast/static/: clipboard.js  filelist.js  fit_h1.js  health.js  main.css  podcasto.css  webplayer.js
archivepodcast/templates/: about.html.j2  error.html.j2  error.j2  filelist.html.j2  guide.html.j2  health.html.j2  home.html.j2  home.j2  index.html.j2  webplayer.html.j2
archivepodcast/utils/: file_cache.py  health.py  log_messages.py  logger.py  paths_helper.py  profiler.py  rss.py  s3.py  serverless.py  time.py
docker/: _dep_ffmpeg.Dockerfile  _dep_ffmpeg_al2023.Dockerfile  _dep_ffmpeg_bookworm.Dockerfile  _dep_ffmpeg_lambda.Dockerfile  adhoc.Dockerfile  lambda.Dockerfile  main.Dockerfile  main_al.Dockerfile  pytest.Dockerfile  webserver.Dockerfile
docs/: conf.py  configuration.md  deploy_local.md  deploy_local_nginx.md  deploy_s3_hybrid.md  development.md  index.md  index.rst
docs/deployment/: deploy_docker.md  deploy_local.md  deploy_local_nginx.md  deploy_s3_hybrid.md  deploy_s3_only.md  docker.md  local.md  local_nginx.md  options.md  run_adhoc.md  s3_hybrid.md  s3_only.md
docs/development/: code_quality.md  development.md  docker.md  lambda.md  pytest.md  vitest.md
flaskr/: archivepodcast.py  podcastdownload.py
scripts/: run_ci_coverage.sh  run_ci_local.sh  run_docker_al2023_adhoc.sh  run_docker_al2023_webserver.sh  run_docker_lambda.sh  run_docker_lambda_invoke.sh  run_docker_main_adhoc.sh  run_docker_main_webserver.sh  run_docker_pytest.sh  run_trivy.sh
scripts/config/: config-ci.json  rss-ci.rss
static/: clipboard.js  links.js  podcasto.css
templates/: error.j2  home.j2
tests/: Dockerfile  __init__.py  conftest.py  constants.py  test__meta.py  test__no_pollution.py  test_adhoc_run.py  test_archivepodcast_bp.py  test_asset_downloader.py  test_config.py  test_config_llm.py  test_config_unit.py  test_health.py  test_home.py  test_instances_podcast_archiver.py  test_instances_podcast_archiver_llm.py  test_lambda_handler.py  test_logger.py  test_logger_conf.py  test_logger_unit.py  test_path_helper.py  test_podcast_archiver.py  test_podcast_archiver_s3.py  test_podcast_downloader.py  test_podcast_downloader_s3.py  test_s3.py  test_utils_file_cache.py  test_utils_rss.py  test_utils_time.py  z_clipboard.test.js  z_filelist.test.js  z_filelist_functions.test.js  z_fit_h1.test.js  z_health.test.js  z_webplayer.test.js
tests/archiver/: __init__.py  test_podcast_archiver.py  test_podcast_archiver_s3.py
tests/blueprints/: __init__.py  test_archivepodcast_bp.py  test_home.py
tests/configs/: config.toml  logging_invalid.json  logging_invalid.toml  logging_invalid_log_level.json  logging_invalid_log_level.toml  testing_false_valid.json  testing_false_valid.toml  testing_true_no_forward_slash.json  testing_true_no_forward_slash.toml  testing_true_valid.json  testing_true_valid.toml  testing_true_valid_live.json  testing_true_valid_live.toml  testing_true_valid_live_s3.json  testing_true_valid_live_s3.toml  testing_true_valid_no_override_info.json  testing_true_valid_no_override_info.toml  testing_true_valid_s3.json  testing_true_valid_s3.toml
tests/downloader/: __init__.py  test_asset_downloader.py  test_podcast_downloader.py  test_podcast_downloader_s3.py
tests/fixtures/: __init__.py  aiohttp.py  archivepodcast_app.py  archivepodcast_obj.py  asyncio.py  aws.py  configs.py  paths.py  requests.py  threading.py  threads.py
tests/helpers/: __init__.py  logging.py
tests/instances/: __init__.py  test_path_helper.py  test_podcast_archiver.py
tests/models/: aiohttp.py
tests/routers/: __init__.py  test_home.py  test_routers.py
tests/rss/: test_valid.rss  test_valid_no_episodes.rss  test_valid_wav.rss
tests/utils/: __init__.py  test_file_cache.py  test_health.py  test_logger_conf.py  test_logger_unit.py  test_profiler.py  test_rss.py  test_time.py
